# 2d_nbody_gravity_sim

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  particle.cpp  particle.hpp
